packages/csharp/src/Kreuzberg/runtimes/osx-arm64/native/include/kreuzberg.h


typedef struct KREUZBERGExtractionConfig KREUZBERGExtractionConfig;
typedef struct KREUZBERGExtractionResult KREUZBERGExtractionResult;
typedef struct KREUZBERGHierarchyConfig KREUZBERGHierarchyConfig;
typedef struct KREUZBERGHtmlOutputConfig KREUZBERGHtmlOutputConfig;
typedef struct KREUZBERGImageExtractionConfig KREUZBERGImageExtractionConfig;
typedef struct KREUZBERGImagePreprocessingConfig KREUZBERGImagePreprocessingConfig;
typedef struct KREUZBERGKeyword KREUZBERGKeyword;
typedef struct KREUZBERGKeywordConfig KREUZBERGKeywordConfig;
typedef struct KREUZBERGLanguageDetectionConfig KREUZBERGLanguageDetectionConfig;
typedef struct KREUZBERGLayoutDetectionConfig KREUZBERGLayoutDetectionConfig;
typedef struct KREUZBERGMetadata KREUZBERGMetadata;
typedef struct KREUZBERGOcrConfig KREUZBERGOcrConfig;
typedef struct KREUZBERGOcrQualityThresholds KREUZBERGOcrQualityThresholds;
typedef struct KREUZBERGPaddleOcrConfig KREUZBERGPaddleOcrConfig;
typedef struct KREUZBERGPageConfig KREUZBERGPageConfig;
typedef struct KREUZBERGPdfConfig KREUZBERGPdfConfig;
typedef struct KREUZBERGPostProcessorConfig KREUZBERGPostProcessorConfig;
typedef struct KREUZBERGQrCode KREUZBERGQrCode;
typedef struct KREUZBERGRakeParams KREUZBERGRakeParams;
typedef struct KREUZBERGRedactionConfig KREUZBERGRedactionConfig;
typedef struct KREUZBERGRedactionPattern KREUZBERGRedactionPattern;
typedef struct KREUZBERGRedactionTerm KREUZBERGRedactionTerm;
typedef struct KREUZBERGRerankedDocument KREUZBERGRerankedDocument;
typedef struct KREUZBERGRerankerConfig KREUZBERGRerankerConfig;
typedef struct KREUZBERGRerankerPreset KREUZBERGRerankerPreset;
typedef struct KREUZBERGSecurityLimits KREUZBERGSecurityLimits;
typedef struct KREUZBERGServerConfig KREUZBERGServerConfig;
typedef struct KREUZBERGSupportedFormat KREUZBERGSupportedFormat;
typedef struct KREUZBERGTesseractConfig KREUZBERGTesseractConfig;
typedef struct KREUZBERGTokenReductionConfig KREUZBERGTokenReductionConfig;
typedef struct KREUZBERGTokenReductionOptions KREUZBERGTokenReductionOptions;
typedef struct KREUZBERGTranscriptionConfig KREUZBERGTranscriptionConfig;
typedef struct KREUZBERGTreeSitterConfig KREUZBERGTreeSitterConfig;
typedef struct KREUZBERGTreeSitterProcessConfig KREUZBERGTreeSitterProcessConfig;
typedef struct KREUZBERGYakeParams KREUZBERGYakeParams;
char *kreuzberg_image_extraction_config_to_json(const KREUZBERGImageExtractionConfig *ptr);
void kreuzberg_image_extraction_config_free(KREUZBERGImageExtractionConfig *ptr);
char *kreuzberg_token_reduction_options_to_json(const KREUZBERGTokenReductionOptions *ptr);
void kreuzberg_token_reduction_options_free(KREUZBERGTokenReductionOptions *ptr);
char *kreuzberg_language_detection_config_to_json(const KREUZBERGLanguageDetectionConfig *ptr);
void kreuzberg_language_detection_config_free(KREUZBERGLanguageDetectionConfig *ptr);
char *kreuzberg_html_output_config_to_json(const KREUZBERGHtmlOutputConfig *ptr);
void kreuzberg_html_output_config_free(KREUZBERGHtmlOutputConfig *ptr);
char *kreuzberg_layout_detection_config_to_json(const KREUZBERGLayoutDetectionConfig *ptr);
void kreuzberg_layout_detection_config_free(KREUZBERGLayoutDetectionConfig *ptr);
char *kreuzberg_ocr_quality_thresholds_to_json(const KREUZBERGOcrQualityThresholds *ptr);
void kreuzberg_ocr_quality_thresholds_free(KREUZBERGOcrQualityThresholds *ptr);
char *kreuzberg_ocr_config_to_json(const KREUZBERGOcrConfig *ptr);
void kreuzberg_ocr_config_free(KREUZBERGOcrConfig *ptr);
char *kreuzberg_page_config_to_json(const KREUZBERGPageConfig *ptr);
void kreuzberg_page_config_free(KREUZBERGPageConfig *ptr);
char *kreuzberg_pdf_config_to_json(const KREUZBERGPdfConfig *ptr);
void kreuzberg_pdf_config_free(KREUZBERGPdfConfig *ptr);
char *kreuzberg_hierarchy_config_to_json(const KREUZBERGHierarchyConfig *ptr);
void kreuzberg_hierarchy_config_free(KREUZBERGHierarchyConfig *ptr);
char *kreuzberg_post_processor_config_to_json(const KREUZBERGPostProcessorConfig *ptr);
void kreuzberg_post_processor_config_free(KREUZBERGPostProcessorConfig *ptr);
char *kreuzberg_redaction_config_to_json(const KREUZBERGRedactionConfig *ptr);
char *kreuzberg_redaction_term_to_json(const KREUZBERGRedactionTerm *ptr);
void kreuzberg_redaction_term_free(KREUZBERGRedactionTerm *ptr);
char *kreuzberg_redaction_pattern_to_json(const KREUZBERGRedactionPattern *ptr);
void kreuzberg_redaction_pattern_free(KREUZBERGRedactionPattern *ptr);
char *kreuzberg_reranker_config_to_json(const KREUZBERGRerankerConfig *ptr);
char *kreuzberg_transcription_config_to_json(const KREUZBERGTranscriptionConfig *ptr);
void kreuzberg_transcription_config_free(KREUZBERGTranscriptionConfig *ptr);
char *kreuzberg_tree_sitter_config_to_json(const KREUZBERGTreeSitterConfig *ptr);
void kreuzberg_tree_sitter_config_free(KREUZBERGTreeSitterConfig *ptr);
char *kreuzberg_tree_sitter_process_config_to_json(const KREUZBERGTreeSitterProcessConfig *ptr);
void kreuzberg_tree_sitter_process_config_free(KREUZBERGTreeSitterProcessConfig *ptr);
char *kreuzberg_supported_format_to_json(const KREUZBERGSupportedFormat *ptr);
void kreuzberg_supported_format_free(KREUZBERGSupportedFormat *ptr);
char *kreuzberg_server_config_to_json(const KREUZBERGServerConfig *ptr);
char *kreuzberg_security_limits_to_json(const KREUZBERGSecurityLimits *ptr);
void kreuzberg_security_limits_free(KREUZBERGSecurityLimits *ptr);
char *kreuzberg_token_reduction_config_to_json(const KREUZBERGTokenReductionConfig *ptr);
void kreuzberg_token_reduction_config_free(KREUZBERGTokenReductionConfig *ptr);
char *kreuzberg_extraction_result_to_json(const KREUZBERGExtractionResult *ptr);
char *kreuzberg_image_preprocessing_config_to_json(const KREUZBERGImagePreprocessingConfig *ptr);
void kreuzberg_image_preprocessing_config_free(KREUZBERGImagePreprocessingConfig *ptr);
char *kreuzberg_tesseract_config_to_json(const KREUZBERGTesseractConfig *ptr);
void kreuzberg_tesseract_config_free(KREUZBERGTesseractConfig *ptr);
char *kreuzberg_metadata_to_json(const KREUZBERGMetadata *ptr);
char *kreuzberg_qr_code_to_json(const KREUZBERGQrCode *ptr);
void kreuzberg_qr_code_free(KREUZBERGQrCode *ptr);
char *kreuzberg_reranked_document_to_json(const KREUZBERGRerankedDocument *ptr);
void kreuzberg_reranked_document_free(KREUZBERGRerankedDocument *ptr);
char *kreuzberg_reranker_preset_to_json(const KREUZBERGRerankerPreset *ptr);
void kreuzberg_reranker_preset_free(KREUZBERGRerankerPreset *ptr);
char *kreuzberg_yake_params_to_json(const KREUZBERGYakeParams *ptr);
void kreuzberg_yake_params_free(KREUZBERGYakeParams *ptr);
char *kreuzberg_rake_params_to_json(const KREUZBERGRakeParams *ptr);
void kreuzberg_rake_params_free(KREUZBERGRakeParams *ptr);
char *kreuzberg_keyword_config_to_json(const KREUZBERGKeywordConfig *ptr);
char *kreuzberg_keyword_to_json(const KREUZBERGKeyword *ptr);
void kreuzberg_keyword_free(KREUZBERGKeyword *ptr);
char *kreuzberg_paddle_ocr_config_to_json(const KREUZBERGPaddleOcrConfig *ptr);
KREUZBERGExtractionResult *kreuzberg_extract_bytes(const uint8_t *content,
                                                   uintptr_t content_len,
                                                   const char *mime_type,
                                                   const KREUZBERGExtractionConfig *config);